--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>user-accounts-api</artifactId>
+	<artifactId>user-register-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>user-accounts-api</name>
+	<name>user-register-api</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
-		<kotlin.version>1.6.10</kotlin.version>
+		<java.version>11</java.version>
+		<kotlin.version>1.5.31</kotlin.version>
 	</properties>
 	<dependencies>
 		<dependency>
